Fix section collapse in some browsers

--- a/packages/show/scss/components/_Section.scss
+++ b/packages/show/scss/components/_Section.scss
@@ -1,8 +1,6 @@
 
 .ShowSection {
   summary {
-    display: flex;
-    align-items: baseline;
     cursor: pointer;
     user-select: none;
     transition: background-color .125s ease-in-out;
